--- a/academy-service-local.yaml
+++ b/academy-service-local.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: 8082
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://149.50.140.55:8084/eureka/
+      defaultZone: http://localhost:8084/eureka/
 
 management:
   endpoints:
@@ -16,7 +16,7 @@ management:
 
 spring:
   datasource:
-    url: jdbc:postgresql://149.50.140.55:5432/capnee
+    url: jdbc:postgresql://localhost:5432/capnee
     username: root
     password: dbpassuat
     driver-class-name: org.postgresql.Driver
@@ -32,3 +32,4 @@ spring:
 security:
   jwt:
     secret-key: secret
+
