--- a/gateway-service-uat.yaml
+++ b/gateway-service-uat.yaml
@@ -32,3 +32,10 @@ spring:
             - Path=/user/**
           filters:
             - StripPrefix=1
+
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.cloud.netflix.eureka: DEBUG
+
