--- a/academy-service-uat.yaml
+++ b/academy-service-uat.yaml
@@ -1,10 +1,6 @@
 server:
   port: 8082
 
-micro
-  user
-    url: http://localhost:8081
-
 eureka:
   client:
     serviceUrl:
@@ -32,7 +28,9 @@ spring:
       hibernate.format_sql: true
       hibernate.use_sql_comments: true
 
-
+micro:
+  user:
+    url: http://localhost:8081
 
 security:
   jwt:
