--- a/academy-service-uat.yaml
+++ b/academy-service-uat.yaml
@@ -4,7 +4,9 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8084/eureka/
+      defaultZone: http://149.50.140.55:8084/eureka/
+  instance:
+    prefer-ip-address: true
 
 management:
   endpoints:
@@ -28,11 +30,11 @@ spring:
       hibernate.format_sql: true
       hibernate.use_sql_comments: true
 
-micro:
-  user:
-    url: http://localhost:8081
 
 security:
   jwt:
     secret-key: secret
 
+micro:
+  user:
+    url: http://149.50.140.55:8081  
