--- a/gateway-service-local.yaml
+++ b/gateway-service-local.yaml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8084/eureka/
+      defaultZone: http://localhost:8091/eureka/
   instance:
     prefer-ip-address: true
 
@@ -30,5 +30,11 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/user/**
+          filters:
+            - StripPrefix=1
+        - id: person-service
+          uri: lb:/person-service
+          predicates:
+            - Path=/person/**
           filters:
             - StripPrefix=1
